# tally

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  REVIEW.md  SEARCH_REFACTOR.md  SEARCH_REFACTOR_PLAN.md  SEARCH_UX_PLAN.md  TODO  tally.db.old
.ai/: core.md
.claude/skills/tally/: SKILL.md
src/: classify.rs  cli.rs  config.rs  db.rs  error.rs  import.rs  lib.rs  logging.rs  main.rs  search.rs  store.rs  types.rs
src/classify/: adapter.rs  mod.rs  similarity.rs  svm.rs  tests.rs  tfidf.rs  transfers.rs
src/search/: context.rs  filter.rs  fuzzy.rs  legacy.rs  mod.rs  parse.rs  placeholders.rs  query.rs  render.rs  tokenize.rs
src/search/filters/: account.rs  amount.rs  category.rs  date.rs  list.rs  mod.rs  sort.rs
src/store/: accounts.rs  categories.rs  enrichments.rs  filters.rs  import.rs  mod.rs  queries.rs  test_support.rs  transfers.rs
src/tui/: app.rs  filtered_list.rs  keymap.rs  mod.rs  modal.rs  search_bar.rs  table.rs  ui.rs
src/tui/app/: accounts.rs  categories.rs  filters.rs  mod.rs  search.rs  tabs.rs  transfers.rs
tools/: README.md  pocketsmith-pull
