[package]
name = "tally"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
crossterm = "0.29"
hex = "0.4.3"
ratatui = "0.29"
rusqlite = { version = "0.38.0", features = ["bundled", "functions"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
nucleo-matcher = "0.3"
regex = "1"
tui-input = "0.11"

[dev-dependencies]
tempfile = "3.24.0"
